 * Fix: Image title text in the gallery and in the chooser now wraps for long filenames (LB (Ben Johnston), Luiz Boaretto)
 * Fix: Move image editor action buttons to the bottom of the form on mobile (Julian Gallo)
 * Fix: StreamField icons are now correctly sorted into groups on the 'append' menu (Tim Heap)


2.0 (28.02.2018)
~~~~~~~~~~~~~~~~

 * Added support for Django 2.0 (Matt Westcott, Karl Hobley, LB (Ben Johnston), Mads Jensen)
 * Reorganised module paths (Karl Hobley, Matt Westcott)
 * Replaced the hallo.js rich text editor with Draftail (Thibaud Colas, Loïc Teixeira, Matt Westcott)
 * Removed support for Python 2.7, Django 1.8 and Django 1.10
 * Removed support for Elasticsearch 1.x
 * Added the ability to schedule updates to existing published pages (Patrick Woods)
 * Moved Wagtail API v1 implementation (`wagtail.contrib.api`) to an external app (https://github.com/wagtail/wagtailapi_legacy) (Karl Hobley)
 * The page chooser now searches all fields of a page, instead of just the title (Bertrand Bordage)
 * Implement ordering by date in form submission view (LB (Ben Johnston))
 * Elasticsearch scroll API is now used when fetching more than 100 search results (Karl Hobley)
 * Added hidden field to the form builder (Ross Crawford-d'Heureuse)
 * Usage count now shows on delete confirmation page when WAGTAIL_USAGE_COUNT_ENABLED is active (Kees Hink)
 * Added usage count to snippets (Kees Hink)
 * Moved usage count to the sidebar on the edit page (Kees Hink)
 * Explorer menu now reflects customisations to the page listing made via the `construct_explorer_page_queryset` hook and `ModelAdmin.exclude_from_explorer` property (Tim Heap)
 * "Choose another image" button changed to "Change image" to avoid ambiguity (Edd Baldry)
 * Added hooks `before_create_user`, `after_create_user`, `before_delete_user`, `after_delete_user`, `before_edit_user`, `after_edit_user` (Jon Carmack)